--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Finanse"
         tools:targetApi="31">
         <activity
+            android:name=".expenses"
+            android:exported="false" />
+        <activity
             android:name=".password1"
             android:exported="false" />
         <activity
